# BookManager-qt

./: CMakeLists.txt  LICENSE  README.md  bookmanager.cpp  bookmanager.h  bookmanager.ui  bookmodel.cpp  bookmodel.h  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newitemdialog.cpp  newitemdialog.h  newitemdialog.ui  paper-cerberus.pro  papercerberus.cpp  papercerberus.h  paperzerber.cpp  paperzerber.h  paperzerber.ui  saveinfo.cpp  saveinfo.h  saveinfo.ui  tasklist.yaml
include/ZipLib/extlibs/bzip2/: bzip2.vcxproj
include/ZipLib/extlibs/lzma/: lzma.vcxproj
include/ZipLib/extlibs/zlib/: zlib.vcxproj
lib/ZipLib/: bzip2.lib  lzma.lib  zlib.lib
